--- a/Testing/.classpath
+++ b/Testing/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="source"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Common Utilities"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Flagco"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
